--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,16 +1,29 @@
+/* asteriks wildcard selector to override default styles added by the browser */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
+
+/* General styles */
+body {
+    min-height: 100vh;
+    display: flex; 
+    flex-direction: column;
+    /* Generic styles */
+    color: #3a3a3a;
+}
+/* header */
 header {
     background-color: lightcoral;
 }
+/* main content */
 main {  
     background-color: lightblue;
-    /* main-content property removed as it was incomplete */
+    /* make main element take up all surplus space to push footer down */
+    flex: 1 0 auto;
 }
-
+/* footer */
 footer {
     background-color: orange;
 }
