--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,10 @@ body {
     color: #3a3a3a;
     font-family: 'Lato', sans-serif;
 }
+
+h1 {
+    font-family: Oswald, sans-serif;
+}
 /* header */
 header {
     background-color: lightcoral;
