display navbar items, hide label

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -47,6 +47,20 @@ nav {
     padding: 0 1rem;
     box-shadow: 0 2px 2px #3a3a3a;
     display: none;
+    top: 100%;
+}
+
+/* Nav toggle */
+#nav-toggle: checked ~ nav {
+    display: block;
+}
+
+#nav-toggle {
+    display: none;
+}
+
+.nav-toggle-label {
+    font-size: 2rem;
 }
 /* header */
 header {
@@ -56,6 +70,10 @@ header {
     z-index: 99;
     width: 100%;
     box-shadow: 0 2px 2px #3a3a3a;
+    display: flex;
+    justify-content: space-between;
+    align-items: baseline;
+
 }
 
 header a {
@@ -67,8 +85,31 @@ main {
     background-color: lightblue;
     /* make main element take up all surplus space to push footer down */
     flex: 1 0 auto;
+    margin-top: 47px;
 }
 /* footer */
 footer {
     background-color: orange;
+}
+
+/* Media query: tablets and larger 768px and up */
+@media screen and (min-width: 768px) {
+    /* header */
+    nav {
+        display: block;
+        position: relative;
+        box-shadow: none;
+        width: fit-content;
+        padding-right: 1rem;
+    }
+    #menu {
+        display: flex;
+
+    }
+    #menu > li {
+        padding-left: 1rem;
+    }
+    .nav-toggle-label {
+        display: none;
+    }
 }
