--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -138,6 +138,31 @@ hr {
     align-items: center;
     justify-content: center;
 }
+
+#times { 
+    background: url("../images/dublin-city.webp") no-repeat center/cover;
+    /* Handles responsivity without the need for a media query */
+    display: flex;
+    flex-wrap: wrap;
+}
+
+#times div {
+    color: #ffffff;
+    background-color: rgba(0, 0, 0, .6);
+    padding 15px;
+    text-align: center;
+    /*this will not wrap on screens less than 400px wide.
+    each div will expand to fill the available space*/ 
+    flex-basis: 200px;
+    flex-grow: 1;
+    /* creates a grid of meet up times divs over the bg. image */
+    border: 2px solid #ffffff;
+}
+
+#times h3 {
+    /*overide the heading color set in gen. styes*/
+    color: #ffffff;
+}
 /* footer */
 #social-networks {
     text-align: center;
@@ -169,6 +194,10 @@ hr {
 #cover-text > h2, #cover-text > h3 {
     color: #ffffff;
 } 
+
+
+
+}
 /* Media query: tablets and larger 768px and up */
 @media screen and (min-width: 768px) {
     /* header */
