hide section head with utility class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,9 @@ body {
     color: #3a3a3a;
     font-family: 'Lato', sans-serif;
 }
+.hidden-heading {
+    display: none;
+}
 
 h1, h2, h3 {
     font-family: Oswald, sans-serif;
