add styling for gallery for mob. phones

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,6 +166,16 @@ hr {
     /*overide the heading color set in gen. styes*/
     color: #ffffff;
 }
+
+/* Gallery page */
+#photos img {
+    width: 100%;
+    line-height: 1em;
+    }
+
+#photos {
+    line-height: 0;
+}
 /* footer */
 #social-networks {
     text-align: center;
