add column count to larger screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -186,12 +186,6 @@ hr {
 
 }
 
-#social-networks i {
-    font-size: 160%;
-    padding: 5%;
-    color: #3a3a3a;
-}
-
 #cover-text {
     background-color: rgba(241, 109, 107, .7);
     font-size: 130%;
@@ -208,9 +202,22 @@ hr {
     color: #ffffff;
 } 
 
-
-
+#social-networks i {
+    font-size: 160%;
+    padding: 5%;
+    color: #3a3a3a;
 }
+
+
+/* Media query: tablets and larger 576px and up */
+@media screen and (min-width: 576px) {
+    #photos {
+        column-count: 2;
+        column-gap: 0;
+    }
+}
+
+
 /* Media query: tablets and larger 768px and up */
 @media screen and (min-width: 768px) {
     /* header */
@@ -266,11 +273,22 @@ hr {
         text-align: end;
         align-self: flex-end;
     }
+
+    /* Gallery page */
+    #photos {
+        column-count: 3;
+    }
+
+
 }
 /* Large devices (laptops and desktops, 992px and up) */
     @media screen and (min-width: 992px) {
         #menu a:hover{
             border-bottom: 1px solid #3a3a3a;
+        }
+
+        #photos {
+            column-count: 4;
         }
     }
         
